# os-labs

lab2_2/: CMakeLists.txt
lab2_2/app/: main.cpp
lab2_2/include/: file_operations.h  nru_cache.h
lab2_2/src/: file_operations.cpp  nru_cache.cpp
shell/: .gitignore  CMakeLists.txt
shell/src/: CMakeLists.txt
shell/src/benchmark/: CMakeLists.txt  bench1.cpp  bench1.h  bench1_main.cpp  bench2.cpp  bench2.h  bench2_main.cpp  multi_bench.cpp
shell/src/shell/: CMakeLists.txt  directory.cpp  directory.h  execute_command.cpp  execute_command.h  shell_main.cpp
